--- a/exercisepdfs/Ch7/biblio/workshopreprints.bib
+++ b/exercisepdfs/Ch7/biblio/workshopreprints.bib
@@ -360,6 +360,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2006.11.23},
+  url         = {https://doi.org/10.1111/j.1365-2664.2006.01135.x},
 }
 
 @TECHREPORT{burt_review,
@@ -1041,6 +1042,7 @@ Tenho IMPRESSO},
   owner     = {eric},
   publisher = {Cambridge University Press ({CUP})},
   timestamp = {2012.08.14},
+  url       = {https://doi.org/10.1017/S0959270909990323},
 }
 
 @TECHREPORT{thomas_potential,
